// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`트리 스냅샷 그리드가 있는 기본 상태 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F2F0E2",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <Modal
      animationType="none"
      navigationBarTranslucent={true}
      onRequestClose={[Function]}
      statusBarTranslucent={true}
      testID="character-tracking-picker-modal"
      transparent={true}
      visible={true}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#0F0A068C",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "paddingBottom": 50,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 75,
          }
        }
        testID="character-tracking-picker-overlay"
      >
        <View
          style={
            {
              "backgroundColor": "#FDFCF6",
              "borderColor": "#685B4A",
              "borderRadius": 14,
              "borderWidth": 1,
              "maxHeight": "100%",
              "maxWidth": 384,
              "padding": 24,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "columnGap": 4,
                "flexShrink": 0,
                "marginBottom": 16,
                "rowGap": 4,
              }
            }
          >
            <Text
              allowFontScaling={true}
              maxFontSizeMultiplier={1.235}
              style={
                {
                  "color": "#241208",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                }
              }
            >
              캐릭터 관리
            </Text>
            <Text
              allowFontScaling={true}
              maxFontSizeMultiplier={1.235}
              style={
                {
                  "color": "#645C42",
                  "fontSize": 14,
                  "lineHeight": 20,
                }
              }
            >
              체크한 캐릭터만 스케줄러 목록에 표시됩니다. 최소 1개는 선택해주세요.
            </Text>
          </View>
          <View
            style={
              {
                "flexShrink": 1,
                "minHeight": 385,
              }
            }
            testID="character-tracking-picker-body"
          >
            <RCTScrollView
              contentContainerStyle={
                {
                  "paddingRight": 24,
                }
              }
              style={
                {
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "marginRight": -24,
                }
              }
              testID="character-tracking-picker-scroll"
            >
              <View>
                <View>
                  <View
                    style={
                      {
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "margin": -4,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "padding": 4,
                          "width": "33.33%",
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": true,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        role="button"
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#FEECDA",
                            "borderColor": "#F58B0F",
                            "borderRadius": 14,
                            "borderWidth": 1,
                            "columnGap": 4,
                            "paddingBottom": 12,
                            "paddingLeft": 4,
                            "paddingRight": 4,
                            "paddingTop": 12,
                            "rowGap": 4,
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={16}
                          bbWidth={16}
                          fill="#F58B0F"
                          focusable={false}
                          height={16}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          stroke="#F58B0F"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={1.5}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "position": "absolute",
                                "right": 6,
                                "top": 6,
                              },
                              {
                                "flex": 0,
                                "height": 16,
                                "width": 16,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4294281999,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "fill",
                                "stroke",
                                "strokeWidth",
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            stroke={
                              {
                                "payload": 4294281999,
                                "type": 0,
                              }
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                            strokeWidth={1.5}
                          >
                            <RNSVGPath
                              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                              fill={
                                {
                                  "payload": 4294281999,
                                  "type": 0,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                  "stroke",
                                  "strokeWidth",
                                  "strokeLinecap",
                                  "strokeLinejoin",
                                ]
                              }
                              stroke={
                                {
                                  "payload": 4294281999,
                                  "type": 0,
                                }
                              }
                              strokeLinecap={1}
                              strokeLinejoin={1}
                              strokeWidth={1.5}
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            {
                              "backgroundColor": "#E4E1CE",
                              "borderRadius": 9999,
                              "height": 56,
                              "overflow": "hidden",
                              "width": 56,
                            }
                          }
                        >
                          <Image
                            accessibilityLabel="낟낟"
                            source={
                              {
                                "uri": "https://example.com/1.png",
                              }
                            }
                            style={
                              {
                                "height": 262.5,
                                "left": -100.625,
                                "position": "absolute",
                                "top": -105,
                                "width": 262.5,
                              }
                            }
                            testID="character-face-ocid-1"
                          />
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "columnGap": 2,
                              "flexDirection": "row",
                              "justifyContent": "center",
                              "rowGap": 2,
                              "width": "100%",
                            }
                          }
                        >
                          <Image
                            accessibilityLabel="엘리시움"
                            resizeMode="contain"
                            source={
                              {
                                "testUri": "../../../src/assets/worlds/elysium.png",
                              }
                            }
                            style={
                              {
                                "flexShrink": 0,
                                "height": 17,
                              }
                            }
                            testID="world-emblem-ocid-1"
                          />
                          <Text
                            allowFontScaling={true}
                            maxFontSizeMultiplier={1.235}
                            numberOfLines={1}
                            style={
                              {
                                "color": "#241208",
                                "fontSize": 12,
                                "fontWeight": "600",
                                "lineHeight": 16,
                              }
                            }
                          >
                            낟낟
                          </Text>
                        </View>
                        <Text
                          allowFontScaling={true}
                          maxFontSizeMultiplier={1.235}
                          style={
                            {
                              "color": "#645C42",
                              "fontSize": 12,
                              "lineHeight": 16,
                            }
                          }
                        >
                          Lv.
                          293
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        {
                          "padding": 4,
                          "width": "33.33%",
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": false,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        role="button"
                        style={
                          {
                            "alignItems": "center",
                            "borderColor": "#CFC9AE",
                            "borderRadius": 14,
                            "borderWidth": 1,
                            "columnGap": 4,
                            "paddingBottom": 12,
                            "paddingLeft": 4,
                            "paddingRight": 4,
                            "paddingTop": 12,
                            "rowGap": 4,
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={16}
                          bbWidth={16}
                          fill="none"
                          focusable={false}
                          height={16}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          stroke="#645C42"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={1.5}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "position": "absolute",
                                "right": 6,
                                "top": 6,
                              },
                              {
                                "flex": 0,
                                "height": 16,
                                "width": 16,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <RNSVGGroup
                            fill={null}
                            propList={
                              [
                                "fill",
                                "stroke",
                                "strokeWidth",
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            stroke={
                              {
                                "payload": 4284767298,
                                "type": 0,
                              }
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                            strokeWidth={1.5}
                          >
                            <RNSVGPath
                              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                              fill={null}
                              propList={
                                [
                                  "fill",
                                  "stroke",
                                  "strokeWidth",
                                  "strokeLinecap",
                                  "strokeLinejoin",
                                ]
                              }
                              stroke={
                                {
                                  "payload": 4284767298,
                                  "type": 0,
                                }
                              }
                              strokeLinecap={1}
                              strokeLinejoin={1}
                              strokeWidth={1.5}
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            {
                              "backgroundColor": "#E4E1CE",
                              "borderRadius": 9999,
                              "height": 56,
                              "overflow": "hidden",
                              "width": 56,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "height": "100%",
                                "justifyContent": "center",
                                "width": "100%",
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              maxFontSizeMultiplier={1.235}
                              style={
                                {
                                  "color": "#645C42",
                                  "fontSize": 12,
                                  "lineHeight": 16,
                                }
                              }
                            >
                              ?
                            </Text>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "columnGap": 2,
                              "flexDirection": "row",
                              "justifyContent": "center",
                              "rowGap": 2,
                              "width": "100%",
                            }
                          }
                        >
                          <Image
                            accessibilityLabel="베라"
                            resizeMode="contain"
                            source={
                              {
                                "testUri": "../../../src/assets/worlds/bera.png",
                              }
                            }
                            style={
                              {
                                "flexShrink": 0,
                                "height": 17,
                              }
                            }
                            testID="world-emblem-ocid-2"
                          />
                          <Text
                            allowFontScaling={true}
                            maxFontSizeMultiplier={1.235}
                            numberOfLines={1}
                            style={
                              {
                                "color": "#241208",
                                "fontSize": 12,
                                "fontWeight": "600",
                                "lineHeight": 16,
                              }
                            }
                          >
                            내옆에최성일
                          </Text>
                        </View>
                        <Text
                          allowFontScaling={true}
                          maxFontSizeMultiplier={1.235}
                          style={
                            {
                              "color": "#645C42",
                              "fontSize": 12,
                              "lineHeight": 16,
                            }
                          }
                        >
                          Lv.
                          211
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        {
                          "padding": 4,
                          "width": "33.33%",
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": false,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        role="button"
                        style={
                          {
                            "alignItems": "center",
                            "borderColor": "#CFC9AE",
                            "borderRadius": 14,
                            "borderWidth": 1,
                            "columnGap": 4,
                            "paddingBottom": 12,
                            "paddingLeft": 4,
                            "paddingRight": 4,
                            "paddingTop": 12,
                            "rowGap": 4,
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={16}
                          bbWidth={16}
                          fill="none"
                          focusable={false}
                          height={16}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          stroke="#645C42"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={1.5}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "position": "absolute",
                                "right": 6,
                                "top": 6,
                              },
                              {
                                "flex": 0,
                                "height": 16,
                                "width": 16,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <RNSVGGroup
                            fill={null}
                            propList={
                              [
                                "fill",
                                "stroke",
                                "strokeWidth",
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            stroke={
                              {
                                "payload": 4284767298,
                                "type": 0,
                              }
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                            strokeWidth={1.5}
                          >
                            <RNSVGPath
                              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                              fill={null}
                              propList={
                                [
                                  "fill",
                                  "stroke",
                                  "strokeWidth",
                                  "strokeLinecap",
                                  "strokeLinejoin",
                                ]
                              }
                              stroke={
                                {
                                  "payload": 4284767298,
                                  "type": 0,
                                }
                              }
                              strokeLinecap={1}
                              strokeLinejoin={1}
                              strokeWidth={1.5}
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            {
                              "backgroundColor": "#E4E1CE",
                              "borderRadius": 9999,
                              "height": 56,
                              "overflow": "hidden",
                              "width": 56,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "height": "100%",
                                "justifyContent": "center",
                                "width": "100%",
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              maxFontSizeMultiplier={1.235}
                              style={
                                {
                                  "color": "#645C42",
                                  "fontSize": 12,
                                  "lineHeight": 16,
                                }
                              }
                            >
                              ?
                            </Text>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "columnGap": 2,
                              "flexDirection": "row",
                              "justifyContent": "center",
                              "rowGap": 2,
                              "width": "100%",
                            }
                          }
                        >
                          <Text
                            allowFontScaling={true}
                            maxFontSizeMultiplier={1.235}
                            numberOfLines={1}
                            style={
                              {
                                "color": "#241208",
                                "fontSize": 12,
                                "fontWeight": "600",
                                "lineHeight": 16,
                              }
                            }
                          >
                            테스트캐릭터
                          </Text>
                        </View>
                        <Text
                          allowFontScaling={true}
                          maxFontSizeMultiplier={1.235}
                          style={
                            {
                              "color": "#645C42",
                              "fontSize": 12,
                              "lineHeight": 16,
                            }
                          }
                        >
                          Lv.
                          165
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </RCTScrollView>
          </View>
          <View
            style={
              {
                "columnGap": 8,
                "flexDirection": "row",
                "flexShrink": 0,
                "justifyContent": "flex-end",
                "marginTop": 16,
                "rowGap": 8,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="button"
              style={
                {
                  "borderRadius": 9999,
                  "paddingBottom": 10,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                maxFontSizeMultiplier={1.235}
                style={
                  {
                    "color": "#645C42",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "lineHeight": 20,
                  }
                }
              >
                닫기
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="button"
              style={
                {
                  "backgroundColor": "#F58B0F",
                  "borderRadius": 9999,
                  "opacity": 0.5,
                  "paddingBottom": 10,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                maxFontSizeMultiplier={1.235}
                style={
                  {
                    "color": "#FFEEE2",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  }
                }
              >
                저장
              </Text>
            </View>
          </View>
        </View>
      </View>
    </Modal>
  </View>
</RNCSafeAreaProvider>
`;

exports[`트리 스냅샷 조회 불가 섹션이 있는 상태 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F2F0E2",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <Modal
      animationType="none"
      navigationBarTranslucent={true}
      onRequestClose={[Function]}
      statusBarTranslucent={true}
      testID="character-tracking-picker-modal"
      transparent={true}
      visible={true}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#0F0A068C",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "paddingBottom": 50,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 75,
          }
        }
        testID="character-tracking-picker-overlay"
      >
        <View
          style={
            {
              "backgroundColor": "#FDFCF6",
              "borderColor": "#685B4A",
              "borderRadius": 14,
              "borderWidth": 1,
              "maxHeight": "100%",
              "maxWidth": 384,
              "padding": 24,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "columnGap": 4,
                "flexShrink": 0,
                "marginBottom": 16,
                "rowGap": 4,
              }
            }
          >
            <Text
              allowFontScaling={true}
              maxFontSizeMultiplier={1.235}
              style={
                {
                  "color": "#241208",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                }
              }
            >
              캐릭터 관리
            </Text>
            <Text
              allowFontScaling={true}
              maxFontSizeMultiplier={1.235}
              style={
                {
                  "color": "#645C42",
                  "fontSize": 14,
                  "lineHeight": 20,
                }
              }
            >
              체크한 캐릭터만 스케줄러 목록에 표시됩니다. 최소 1개는 선택해주세요.
            </Text>
          </View>
          <View
            style={
              {
                "flexShrink": 1,
                "minHeight": 385,
              }
            }
            testID="character-tracking-picker-body"
          >
            <RCTScrollView
              contentContainerStyle={
                {
                  "paddingRight": 24,
                }
              }
              style={
                {
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "marginRight": -24,
                }
              }
              testID="character-tracking-picker-scroll"
            >
              <View>
                <View>
                  <View
                    style={
                      {
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "margin": -4,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "padding": 4,
                          "width": "33.33%",
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": false,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        role="button"
                        style={
                          {
                            "alignItems": "center",
                            "borderColor": "#CFC9AE",
                            "borderRadius": 14,
                            "borderWidth": 1,
                            "columnGap": 4,
                            "paddingBottom": 12,
                            "paddingLeft": 4,
                            "paddingRight": 4,
                            "paddingTop": 12,
                            "rowGap": 4,
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={16}
                          bbWidth={16}
                          fill="none"
                          focusable={false}
                          height={16}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          stroke="#645C42"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={1.5}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "position": "absolute",
                                "right": 6,
                                "top": 6,
                              },
                              {
                                "flex": 0,
                                "height": 16,
                                "width": 16,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <RNSVGGroup
                            fill={null}
                            propList={
                              [
                                "fill",
                                "stroke",
                                "strokeWidth",
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            stroke={
                              {
                                "payload": 4284767298,
                                "type": 0,
                              }
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                            strokeWidth={1.5}
                          >
                            <RNSVGPath
                              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                              fill={null}
                              propList={
                                [
                                  "fill",
                                  "stroke",
                                  "strokeWidth",
                                  "strokeLinecap",
                                  "strokeLinejoin",
                                ]
                              }
                              stroke={
                                {
                                  "payload": 4284767298,
                                  "type": 0,
                                }
                              }
                              strokeLinecap={1}
                              strokeLinejoin={1}
                              strokeWidth={1.5}
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            {
                              "backgroundColor": "#E4E1CE",
                              "borderRadius": 9999,
                              "height": 56,
                              "overflow": "hidden",
                              "width": 56,
                            }
                          }
                        >
                          <Image
                            accessibilityLabel="낟낟"
                            source={
                              {
                                "uri": "https://example.com/1.png",
                              }
                            }
                            style={
                              {
                                "height": 262.5,
                                "left": -100.625,
                                "position": "absolute",
                                "top": -105,
                                "width": 262.5,
                              }
                            }
                            testID="character-face-ocid-1"
                          />
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "columnGap": 2,
                              "flexDirection": "row",
                              "justifyContent": "center",
                              "rowGap": 2,
                              "width": "100%",
                            }
                          }
                        >
                          <Image
                            accessibilityLabel="엘리시움"
                            resizeMode="contain"
                            source={
                              {
                                "testUri": "../../../src/assets/worlds/elysium.png",
                              }
                            }
                            style={
                              {
                                "flexShrink": 0,
                                "height": 17,
                              }
                            }
                            testID="world-emblem-ocid-1"
                          />
                          <Text
                            allowFontScaling={true}
                            maxFontSizeMultiplier={1.235}
                            numberOfLines={1}
                            style={
                              {
                                "color": "#241208",
                                "fontSize": 12,
                                "fontWeight": "600",
                                "lineHeight": 16,
                              }
                            }
                          >
                            낟낟
                          </Text>
                        </View>
                        <Text
                          allowFontScaling={true}
                          maxFontSizeMultiplier={1.235}
                          style={
                            {
                              "color": "#645C42",
                              "fontSize": 12,
                              "lineHeight": 16,
                            }
                          }
                        >
                          Lv.
                          293
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        {
                          "padding": 4,
                          "width": "33.33%",
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": false,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        role="button"
                        style={
                          {
                            "alignItems": "center",
                            "borderColor": "#CFC9AE",
                            "borderRadius": 14,
                            "borderWidth": 1,
                            "columnGap": 4,
                            "paddingBottom": 12,
                            "paddingLeft": 4,
                            "paddingRight": 4,
                            "paddingTop": 12,
                            "rowGap": 4,
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={16}
                          bbWidth={16}
                          fill="none"
                          focusable={false}
                          height={16}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          stroke="#645C42"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={1.5}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "position": "absolute",
                                "right": 6,
                                "top": 6,
                              },
                              {
                                "flex": 0,
                                "height": 16,
                                "width": 16,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <RNSVGGroup
                            fill={null}
                            propList={
                              [
                                "fill",
                                "stroke",
                                "strokeWidth",
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            stroke={
                              {
                                "payload": 4284767298,
                                "type": 0,
                              }
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                            strokeWidth={1.5}
                          >
                            <RNSVGPath
                              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                              fill={null}
                              propList={
                                [
                                  "fill",
                                  "stroke",
                                  "strokeWidth",
                                  "strokeLinecap",
                                  "strokeLinejoin",
                                ]
                              }
                              stroke={
                                {
                                  "payload": 4284767298,
                                  "type": 0,
                                }
                              }
                              strokeLinecap={1}
                              strokeLinejoin={1}
                              strokeWidth={1.5}
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            {
                              "backgroundColor": "#E4E1CE",
                              "borderRadius": 9999,
                              "height": 56,
                              "overflow": "hidden",
                              "width": 56,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "height": "100%",
                                "justifyContent": "center",
                                "width": "100%",
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              maxFontSizeMultiplier={1.235}
                              style={
                                {
                                  "color": "#645C42",
                                  "fontSize": 12,
                                  "lineHeight": 16,
                                }
                              }
                            >
                              ?
                            </Text>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "columnGap": 2,
                              "flexDirection": "row",
                              "justifyContent": "center",
                              "rowGap": 2,
                              "width": "100%",
                            }
                          }
                        >
                          <Image
                            accessibilityLabel="베라"
                            resizeMode="contain"
                            source={
                              {
                                "testUri": "../../../src/assets/worlds/bera.png",
                              }
                            }
                            style={
                              {
                                "flexShrink": 0,
                                "height": 17,
                              }
                            }
                            testID="world-emblem-ocid-2"
                          />
                          <Text
                            allowFontScaling={true}
                            maxFontSizeMultiplier={1.235}
                            numberOfLines={1}
                            style={
                              {
                                "color": "#241208",
                                "fontSize": 12,
                                "fontWeight": "600",
                                "lineHeight": 16,
                              }
                            }
                          >
                            내옆에최성일
                          </Text>
                        </View>
                        <Text
                          allowFontScaling={true}
                          maxFontSizeMultiplier={1.235}
                          style={
                            {
                              "color": "#645C42",
                              "fontSize": 12,
                              "lineHeight": 16,
                            }
                          }
                        >
                          Lv.
                          211
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        {
                          "padding": 4,
                          "width": "33.33%",
                        }
                      }
                    >
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": false,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        role="button"
                        style={
                          {
                            "alignItems": "center",
                            "borderColor": "#CFC9AE",
                            "borderRadius": 14,
                            "borderWidth": 1,
                            "columnGap": 4,
                            "paddingBottom": 12,
                            "paddingLeft": 4,
                            "paddingRight": 4,
                            "paddingTop": 12,
                            "rowGap": 4,
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={16}
                          bbWidth={16}
                          fill="none"
                          focusable={false}
                          height={16}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          stroke="#645C42"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={1.5}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "position": "absolute",
                                "right": 6,
                                "top": 6,
                              },
                              {
                                "flex": 0,
                                "height": 16,
                                "width": 16,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <RNSVGGroup
                            fill={null}
                            propList={
                              [
                                "fill",
                                "stroke",
                                "strokeWidth",
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            stroke={
                              {
                                "payload": 4284767298,
                                "type": 0,
                              }
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                            strokeWidth={1.5}
                          >
                            <RNSVGPath
                              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                              fill={null}
                              propList={
                                [
                                  "fill",
                                  "stroke",
                                  "strokeWidth",
                                  "strokeLinecap",
                                  "strokeLinejoin",
                                ]
                              }
                              stroke={
                                {
                                  "payload": 4284767298,
                                  "type": 0,
                                }
                              }
                              strokeLinecap={1}
                              strokeLinejoin={1}
                              strokeWidth={1.5}
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            {
                              "backgroundColor": "#E4E1CE",
                              "borderRadius": 9999,
                              "height": 56,
                              "overflow": "hidden",
                              "width": 56,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "height": "100%",
                                "justifyContent": "center",
                                "width": "100%",
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              maxFontSizeMultiplier={1.235}
                              style={
                                {
                                  "color": "#645C42",
                                  "fontSize": 12,
                                  "lineHeight": 16,
                                }
                              }
                            >
                              ?
                            </Text>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "columnGap": 2,
                              "flexDirection": "row",
                              "justifyContent": "center",
                              "rowGap": 2,
                              "width": "100%",
                            }
                          }
                        >
                          <Text
                            allowFontScaling={true}
                            maxFontSizeMultiplier={1.235}
                            numberOfLines={1}
                            style={
                              {
                                "color": "#241208",
                                "fontSize": 12,
                                "fontWeight": "600",
                                "lineHeight": 16,
                              }
                            }
                          >
                            테스트캐릭터
                          </Text>
                        </View>
                        <Text
                          allowFontScaling={true}
                          maxFontSizeMultiplier={1.235}
                          style={
                            {
                              "color": "#645C42",
                              "fontSize": 12,
                              "lineHeight": 16,
                            }
                          }
                        >
                          Lv.
                          165
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      {
                        "marginTop": 16,
                      }
                    }
                    testID="unavailable-roster"
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "columnGap": 6,
                          "flexDirection": "row",
                          "marginBottom": 6,
                          "rowGap": 6,
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        aria-hidden={true}
                        bbHeight={14}
                        bbWidth={14}
                        fill="none"
                        focusable={false}
                        height={14}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        stroke="#645C42"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth={2}
                        style={
                          [
                            {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            {},
                            {
                              "flex": 0,
                              "height": 14,
                              "width": 14,
                            },
                          ]
                        }
                        vbHeight={24}
                        vbWidth={24}
                        width={14}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            [
                              "fill",
                              "stroke",
                              "strokeWidth",
                              "strokeLinecap",
                              "strokeLinejoin",
                            ]
                          }
                          stroke={
                            {
                              "payload": 4284767298,
                              "type": 0,
                            }
                          }
                          strokeLinecap={1}
                          strokeLinejoin={1}
                          strokeWidth={2}
                        >
                          <RNSVGCircle
                            cx="12"
                            cy="12"
                            fill={null}
                            propList={
                              [
                                "fill",
                                "stroke",
                                "strokeWidth",
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            r="10"
                            stroke={
                              {
                                "payload": 4284767298,
                                "type": 0,
                              }
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                            strokeWidth={2}
                          />
                          <RNSVGPath
                            d="M4.929 4.929 19.07 19.071"
                            fill={null}
                            propList={
                              [
                                "fill",
                                "stroke",
                                "strokeWidth",
                                "strokeLinecap",
                                "strokeLinejoin",
                              ]
                            }
                            stroke={
                              {
                                "payload": 4284767298,
                                "type": 0,
                              }
                            }
                            strokeLinecap={1}
                            strokeLinejoin={1}
                            strokeWidth={2}
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                      <Text
                        allowFontScaling={true}
                        maxFontSizeMultiplier={1.235}
                        style={
                          {
                            "color": "#645C42",
                            "fontSize": 11,
                            "fontWeight": "700",
                            "letterSpacing": 0.28,
                          }
                        }
                      >
                        조회할 수 없는 캐릭터
                      </Text>
                    </View>
                    <View
                      style={
                        {
                          "flexDirection": "row",
                          "flexWrap": "wrap",
                          "margin": -4,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "padding": 4,
                            "width": "33.33%",
                          }
                        }
                      >
                        <View
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": false,
                              "expanded": undefined,
                              "selected": true,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          role="button"
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#E4E1CE",
                              "borderColor": "#CFC9AE",
                              "borderRadius": 14,
                              "borderWidth": 1,
                              "columnGap": 4,
                              "paddingBottom": 12,
                              "paddingLeft": 4,
                              "paddingRight": 4,
                              "paddingTop": 12,
                              "rowGap": 4,
                            }
                          }
                        >
                          <RNSVGSvgView
                            align="xMidYMid"
                            bbHeight={16}
                            bbWidth={16}
                            fill="none"
                            focusable={false}
                            height={16}
                            meetOrSlice={0}
                            minX={0}
                            minY={0}
                            stroke="#645C42"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.75}
                            style={
                              [
                                {
                                  "backgroundColor": "transparent",
                                  "borderWidth": 0,
                                },
                                {
                                  "position": "absolute",
                                  "right": 6,
                                  "top": 6,
                                },
                                {
                                  "flex": 0,
                                  "height": 16,
                                  "width": 16,
                                },
                              ]
                            }
                            vbHeight={24}
                            vbWidth={24}
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <RNSVGGroup
                              fill={null}
                              propList={
                                [
                                  "fill",
                                  "stroke",
                                  "strokeWidth",
                                  "strokeLinecap",
                                  "strokeLinejoin",
                                ]
                              }
                              stroke={
                                {
                                  "payload": 4284767298,
                                  "type": 0,
                                }
                              }
                              strokeLinecap={1}
                              strokeLinejoin={1}
                              strokeWidth={1.75}
                            >
                              <RNSVGCircle
                                cx="12"
                                cy="12"
                                fill={null}
                                propList={
                                  [
                                    "fill",
                                    "stroke",
                                    "strokeWidth",
                                    "strokeLinecap",
                                    "strokeLinejoin",
                                  ]
                                }
                                r="10"
                                stroke={
                                  {
                                    "payload": 4284767298,
                                    "type": 0,
                                  }
                                }
                                strokeLinecap={1}
                                strokeLinejoin={1}
                                strokeWidth={1.75}
                              />
                              <RNSVGPath
                                d="M4.929 4.929 19.07 19.071"
                                fill={null}
                                propList={
                                  [
                                    "fill",
                                    "stroke",
                                    "strokeWidth",
                                    "strokeLinecap",
                                    "strokeLinejoin",
                                  ]
                                }
                                stroke={
                                  {
                                    "payload": 4284767298,
                                    "type": 0,
                                  }
                                }
                                strokeLinecap={1}
                                strokeLinejoin={1}
                                strokeWidth={1.75}
                              />
                            </RNSVGGroup>
                          </RNSVGSvgView>
                          <View
                            style={
                              {
                                "backgroundColor": "#E4E1CE",
                                "borderRadius": 9999,
                                "height": 56,
                                "overflow": "hidden",
                                "width": 56,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "height": "100%",
                                  "justifyContent": "center",
                                  "width": "100%",
                                }
                              }
                            >
                              <Text
                                allowFontScaling={true}
                                maxFontSizeMultiplier={1.235}
                                style={
                                  {
                                    "color": "#645C42",
                                    "fontSize": 12,
                                    "lineHeight": 16,
                                  }
                                }
                              >
                                ?
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "columnGap": 2,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "rowGap": 2,
                                "width": "100%",
                              }
                            }
                          >
                            <Image
                              accessibilityLabel="스카니아"
                              resizeMode="contain"
                              source={
                                {
                                  "testUri": "../../../src/assets/worlds/scania.png",
                                }
                              }
                              style={
                                {
                                  "flexShrink": 0,
                                  "height": 17,
                                }
                              }
                              testID="world-emblem-ocid-4"
                            />
                            <Text
                              allowFontScaling={true}
                              maxFontSizeMultiplier={1.235}
                              numberOfLines={1}
                              style={
                                {
                                  "color": "#241208",
                                  "fontSize": 12,
                                  "fontWeight": "600",
                                  "lineHeight": 16,
                                }
                              }
                            >
                              조회불가
                            </Text>
                          </View>
                          <Text
                            allowFontScaling={true}
                            maxFontSizeMultiplier={1.235}
                            style={
                              {
                                "color": "#645C42",
                                "fontSize": 12,
                                "lineHeight": 16,
                              }
                            }
                          >
                            Lv.
                            200
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </RCTScrollView>
          </View>
          <View
            style={
              {
                "columnGap": 8,
                "flexDirection": "row",
                "flexShrink": 0,
                "justifyContent": "flex-end",
                "marginTop": 16,
                "rowGap": 8,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="button"
              style={
                {
                  "borderRadius": 9999,
                  "paddingBottom": 10,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                maxFontSizeMultiplier={1.235}
                style={
                  {
                    "color": "#645C42",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "lineHeight": 20,
                  }
                }
              >
                닫기
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="button"
              style={
                {
                  "backgroundColor": "#F58B0F",
                  "borderRadius": 9999,
                  "opacity": 0.5,
                  "paddingBottom": 10,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                maxFontSizeMultiplier={1.235}
                style={
                  {
                    "color": "#FFEEE2",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  }
                }
              >
                저장
              </Text>
            </View>
          </View>
        </View>
      </View>
    </Modal>
  </View>
</RNCSafeAreaProvider>
`;
